# plumbot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: macos.yml  standalone.yml  ubuntu.yml
documentation/: CMakeLists.txt
include/engine/: Command.hpp  Engine.hpp  EngineInterface.hpp
scripts/: code_cov.sh
source/: Engine.cpp  EngineInterface.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: engine_unit_tests.cpp  engine_wrapper_tests.cpp  sample.cpp
